--- a/ember/app/templates/components/settings-panels/delete-account.hbs
+++ b/ember/app/templates/components/settings-panels/delete-account.hbs
@@ -3,13 +3,13 @@
     <BsButton
       @type="danger"
       @block={{true}}
-      @disabled={{dialogOpen}}
+      disabled={{dialogOpen}}
       @onClick={{action (mut dialogOpen) true}}
       data-test-delete-account-button
     >
       {{t "delete-account"}}
     </BsButton>
-  
+
     <BsModal
       @open={{dialogOpen}}
       @onSubmit={{action "submit"}}
@@ -19,16 +19,16 @@
       <modal.header>
         <h4 class="modal-title">{{t "delete-account"}}</h4>
       </modal.header>
-  
+
       <modal.body>
         <p><strong>{{t "delete-account-modal.please-enter-password"}}</strong></p>
         <p>{{t "delete-account-modal.proceed-with-caution"}}</p>
-  
+
         <form data-test-password-form {{action "submit" on="submit"}}>
           {{#if error}}
             <BsAlert @type="danger" @dismissible={{false}}>{{error}}</BsAlert>
           {{/if}}
-  
+
           <ValidatedInput
             @type="password"
             @value={{password}}
@@ -39,13 +39,13 @@
             @didValidate={{didValidate}}/>
         </form>
       </modal.body>
-  
+
       <modal.footer>
         <BsButton @onClick={{action modal.close}}>Cancel</BsButton>
-  
+
         <BsButton
           @type="danger"
-          @disabled={{or deleteTask.isRunning (not validations.isValid)}}
+          disabled={{or deleteTask.isRunning (not validations.isValid)}}
           @onClick={{action "submit"}}
           data-test-submit-button
         >
