--- a/ember/app/templates/components/progress-bar.hbs
+++ b/ember/app/templates/components/progress-bar.hbs
@@ -1,1 +1,1 @@
-<div class="custom-progress-bar" style={{this.progress.style}}></div>
+<div local-class="progress-bar" style={{this.progress.style}}></div>
