WingmanRow|Table: Use CSS modules

--- a/ember/app/templates/components/wingman-row.hbs
+++ b/ember/app/templates/components/wingman-row.hbs
@@ -1,5 +1,4 @@
-<tr class="selectable" ...attributes>
-  <td class="color-stripe" style={{colorStripeStyle}}></td>
+<tr local-class="wingman-row" class="selectable" style={{colorStripeStyle}} ...attributes>
   <td>
     {{#if flight.model.id}}
       <span>
