--- a/ember/app/templates/components/wingman-table.hbs
+++ b/ember/app/templates/components/wingman-table.hbs
@@ -1,8 +1,7 @@
 <div ...attributes>
-  <table id="wingman-table" class="table table-condensed">
+  <table class="table table-condensed">
     <thead>
       <tr>
-        <th class="color-stripe"></th>
         <th>{{t "aircraft"}}</th>
         <th>{{t "pilot"}}</th>
         <th>{{t "first-last"}}</th>
