PlayButton: Use CSS modules

--- a/ember/app/templates/components/playback-button.hbs
+++ b/ember/app/templates/components/playback-button.hbs
@@ -1,4 +1,4 @@
-<button type="button" class="PlayButton ol-unselectable" ...attributes {{on "click" @onToggle}}>
+<button type="button" local-class="play-button" class="ol-unselectable" ...attributes {{on "click" @onToggle}}>
   {{#if @isRunning}}
     <img src="../../images/stop.png">
   {{else}}
