--- a/ember/app/templates/components/fullscreen-button.hbs
+++ b/ember/app/templates/components/fullscreen-button.hbs
@@ -1,3 +1,3 @@
-<button type="button" class="FullscreenButton ol-unselectable" ...attributes {{on "click" this.toggle}}>
+<button type="button" local-class="fullscreen-button" class="ol-unselectable" ...attributes {{on "click" this.toggle}}>
   {{fa-icon "arrows-alt"}}
 </button>
