--- a/ember/app/templates/components/fix-table.hbs
+++ b/ember/app/templates/components/fix-table.hbs
@@ -1,5 +1,5 @@
 <div ...attributes>
-  <table id="fix-data" class="table table-condensed">
+  <table local-class="fix-table" class="table table-condensed">
     <tbody>
       {{#each data as |row|}}
         <FixTableRow
