--- a/ember/app/templates/components/cesium-button.hbs
+++ b/ember/app/templates/components/cesium-button.hbs
@@ -1,4 +1,4 @@
-<button type="button" class="CesiumSwitcher ol-unselectable" {{on "click" this.toggle}}>
+<button type="button" local-class="cesium-button" class="ol-unselectable" {{on "click" this.toggle}}>
   {{#if enabled}}
     <img src="../../images/2d.png">
   {{else}}
