--- a/ember/app/templates/components/base-page.hbs
+++ b/ember/app/templates/components/base-page.hbs
@@ -1,7 +1,7 @@
 <div class="container content" ...attributes>
   {{yield}}
-
-  <p local-class="footer">
+  
+  <p class="footer">
     &copy; <LinkTo @route="about.team">{{t "the-skylines-team"}}</LinkTo>
     -
     <LinkTo @route="about.imprint">{{t "imprint"}}</LinkTo>
