--- a/ember/app/templates/components/wingman-row.hbs
+++ b/ember/app/templates/components/wingman-row.hbs
@@ -1,4 +1,5 @@
-<tr local-class="wingman-row" class="selectable" style={{colorStripeStyle}} ...attributes>
+<tr class="selectable" ...attributes>
+  <td class="color-stripe" style={{colorStripeStyle}}></td>
   <td>
     {{#if flight.model.id}}
       <span>
