--- a/ember/app/styles/components/progress-bar.scss
+++ b/ember/app/styles/components/progress-bar.scss
@@ -1,4 +1,4 @@
-.progress-bar {
+.custom-progress-bar {
   position: fixed;
   left: 0;
   top: 0;
@@ -7,12 +7,12 @@
   border-bottom: solid 1px lighten($skylines-blue, 10%);
   box-shadow: 0 0 5px 0 lighten($skylines-blue, 20%);
   z-index: 3000;
+}
 
-  :global(.ember-application) & {
-    top: 40px;
+.ember-application .custom-progress-bar {
+  top: 40px;
 
-    @media (max-width: 767px) {
-      top: 50px;
-    }
+  @media (max-width: 767px) {
+    top: 50px;
   }
 }
