--- a/ember/app/templates/components/tracking-table.hbs
+++ b/ember/app/templates/components/tracking-table.hbs
@@ -1,4 +1,4 @@
-<table local-class="tracking-table">
+<table class="table table-striped table-tracking">
   <thead>
   <tr>
     <th class="hidden-xs date">{{t "last-fix"}}</th>
