CesiumButton: Use  prefix for arguments

--- a/ember/app/templates/components/cesium-button.hbs
+++ b/ember/app/templates/components/cesium-button.hbs
@@ -1,5 +1,5 @@
 <button type="button" local-class="cesium-button" class="ol-unselectable" {{on "click" this.toggle}}>
-  {{#if enabled}}
+  {{#if @enabled}}
     <img src="../../images/2d.png">
   {{else}}
     <img src="../../images/3d.png">
