--- a/ember/app/templates/components/cesium-plane-models.hbs
+++ b/ember/app/templates/components/cesium-plane-models.hbs
@@ -1,5 +1,5 @@
-{{#each fixes as |fix|}}
+{{#each @fixes as |fix|}}
   {{#if fix.coordinate}}
-    <CesiumPlaneModel @scene={{scene}} @coordinate={{fix.coordinate}} @heading={{fix.heading}} />
+    <CesiumPlaneModel @scene={{@scene}} @coordinate={{fix.coordinate}} @heading={{fix.heading}} />
   {{/if}}
 {{/each}}
