--- a/ember/app/templates/components/comments-list.hbs
+++ b/ember/app/templates/components/comments-list.hbs
@@ -1,6 +1,6 @@
 <table class="table" style="table-layout:fixed; word-wrap:break-word;" ...attributes>
   <tbody>
-    {{#each comments as |comment|}}
+    {{#each @comments as |comment|}}
       <tr>
         <td>
           {{#if comment.user}}
@@ -21,9 +21,9 @@
     {{#if account.user.id}}
       <tr>
         <td>
-          <form {{action (perform addCommentTask) on="submit"}}>
-            <Textarea @value={{addCommentText}} class="form-control" @disabled={{addCommentTask.isRunning}} /><br>
-            <input type="submit" value={{t "add-comment"}} class="btn btn-primary" disabled={{addCommentTask.isRunning}}>
+          <form {{action (perform this.addCommentTask) on="submit"}}>
+            <Textarea @value={{this.addCommentText}} class="form-control" @disabled={{this.addCommentTask.isRunning}} /><br>
+            <input type="submit" value={{t "add-comment"}} class="btn btn-primary" disabled={{this.addCommentTask.isRunning}}>
           </form>
         </td>
       </tr>
