--- a/ember/app/templates/components/circling-performance-row.hbs
+++ b/ember/app/templates/components/circling-performance-row.hbs
@@ -1,12 +1,12 @@
 <tr ...attributes>
-  <th>{{t (concat "circling-direction." perf.circlingDirection)}}</th>
+  <th>{{t (concat "circling-direction." @perf.circlingDirection)}}</th>
   <td class="numeric">
-    {{perf.count}}<br>
-    {{format-lift perf.vario}}
+    {{@perf.count}}<br>
+    {{format-lift @perf.vario}}
   </td>
   <td class="numeric">
-    <abbr title={{format-number perf.fraction maximumFractionDigits=1}}>{{format-seconds perf.duration}}</abbr><br>
-    {{format-altitude perf.altDiff}}
+    <abbr title={{format-number @perf.fraction maximumFractionDigits=1}}>{{format-seconds @perf.duration}}</abbr><br>
+    {{format-altitude @perf.altDiff}}
   </td>
 
 </tr>
