SortableTableHeader: Use splattributes

--- a/ember/app/templates/components/flight-list.hbs
+++ b/ember/app/templates/components/flight-list.hbs
@@ -2,31 +2,31 @@
   <thead>
   <tr>
     {{#if showDate}}
-      <SortableTableHeader @column="date" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" @class="date">{{t "date"}}</SortableTableHeader>
+      <SortableTableHeader @column="date" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" class="date">{{t "date"}}</SortableTableHeader>
     {{/if}}
-  
-    <SortableTableHeader @column="score" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" @class="numeric">{{t "score"}}</SortableTableHeader>
-  
+
+    <SortableTableHeader @column="score" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" class="numeric">{{t "score"}}</SortableTableHeader>
+
     {{#if showPilot}}
-      <SortableTableHeader @column="pilot" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @class="pilot">{{t "pilot"}}</SortableTableHeader>
+      <SortableTableHeader @column="pilot" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} class="pilot">{{t "pilot"}}</SortableTableHeader>
     {{/if}}
-  
-    <SortableTableHeader @column="distance" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" @class="numeric">{{t "distance"}}</SortableTableHeader>
-  
+
+    <SortableTableHeader @column="distance" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" class="numeric">{{t "distance"}}</SortableTableHeader>
+
     {{#if showAirport}}
-      <SortableTableHeader @column="airport" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @class="airport">{{t "airport"}}</SortableTableHeader>
+      <SortableTableHeader @column="airport" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} class="airport">{{t "airport"}}</SortableTableHeader>
     {{/if}}
-  
+
     {{#if showClub}}
-      <SortableTableHeader @column="club" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @class="club hidden-sm hidden-xs">{{t "club"}}</SortableTableHeader>
+      <SortableTableHeader @column="club" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} class="club hidden-sm hidden-xs">{{t "club"}}</SortableTableHeader>
     {{/if}}
-  
-    <SortableTableHeader @column="aircraft" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @class="aircraft hidden-xs">{{t "aircraft"}}</SortableTableHeader>
-  
+
+    <SortableTableHeader @column="aircraft" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} class="aircraft hidden-xs">{{t "aircraft"}}</SortableTableHeader>
+
     {{#if showTimes}}
-      <SortableTableHeader @column="time" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" @class="times hidden-xs">{{t "time"}}</SortableTableHeader>
+      <SortableTableHeader @column="time" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" class="times hidden-xs">{{t "time"}}</SortableTableHeader>
     {{/if}}
-  
+
     <th class="column-buttons"></th>
     <th class="num_comments hidden-xs"></th>
   </tr>
