--- a/ember/app/templates/components/tracking-table-row.hbs
+++ b/ember/app/templates/components/tracking-table-row.hbs
@@ -4,9 +4,9 @@
       {{format-relative track.time interval=1000}}
     </abbr>
   </td>
-  
+
   <td><LinkTo @route="user" @model={{track.pilot.id}}>{{track.pilot.name}}</LinkTo></td>
-  
+
   <td>
     {{#if track.nearestAirport}}
       <XFlag @code={{track.nearestAirport.countryCode}} />
@@ -14,9 +14,9 @@
       ({{format-distance track.nearestAirportDistance}})
     {{/if}}
   </td>
-  
+
   <td class="hidden-xs numeric">
-    {{#if (not (is-undefined altitudeAGL))}}
+    {{#if (not-eq altitudeAGL undefined)}}
       {{format-altitude altitudeAGL}}
       <small>AGL</small>
     {{else if track.altitude}}
@@ -26,7 +26,7 @@
       <small>{{t "unknown"}}</small>
     {{/if}}
   </td>
-  
+
   <td nowrap="nowrap" class="column-buttons">
     <LinkTo @route="tracking.details" @model={{track.pilot.id}} class="btn btn-default btn-sm">{{t "show"}}</LinkTo>
   </td>
