--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -1,10 +1,10 @@
 <BasePage>
-  <div id="about">
+  <div local-class="about">
     <div class="row">
       <div class="col-md-12 tagline">
         <p class="lead pull-left" data-test-welcome-message>{{t "about.welcome"}}</p>
 
-        <div class="btn-group social-buttons pull-right visible-md visible-lg">
+        <div local-class="social-buttons">
           <a href="https://www.facebook.com/skylines.project" class="btn btn-default" target="_blank" rel="noopener">{{fa-icon "facebook-square"}}</a>
           <a href="https://twitter.com/skylinesproject" class="btn btn-default" target="_blank" rel="noopener">{{fa-icon "twitter"}}</a>
           <a href="https://github.com/skylines-project/skylines" class="btn btn-default" target="_blank" rel="noopener">{{fa-icon "github-alt"}}</a>
@@ -13,7 +13,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-12 banner">
+      <div local-class="banner" class="col-xs-12">
         <div class="col-xs-3"><LinkTo @route="flight" @model={{17613}} @query={{hash baselayer="Google Physical" overlays="Airspace"}}><img src="/images/about-1.jpeg" class="img-responsive"></LinkTo></div>
         <div class="col-xs-3"><LinkTo @route="flight" @model={{17537}} @query={{hash baselayer="Empty" overlays="Airspace"}}><img src="/images/about-2.jpeg" class="img-responsive"></LinkTo></div>
         <div class="col-xs-3"><LinkTo @route="flight" @model={{17567}} @query={{hash baselayer="OpenStreetMap" overlays="Airspace"}}><img src="/images/about-3.jpeg" class="img-responsive"></LinkTo></div>
