services/intl: Removing remaining unused polyfill data loading code

--- a/ember/app/components/flight-map.hbs
+++ b/ember/app/components/flight-map.hbs
@@ -13,11 +13,11 @@
     {{/if}}
   {{/if}}
 
-  {{#if (and cesiumEnabled this.cesiumLoader.loaded)}}
-    <CesiumScene @map={{map}} as |cesium|>
+  <CesiumLoader @enabled={{cesiumEnabled}}>
+    <CesiumScene @enabled={{cesiumEnabled}} @map={{map}} as |cesium|>
       <CesiumPlaneModels @scene={{cesium.scene}} @fixes={{fixes}} />
     </CesiumScene>
-  {{/if}}
+  </CesiumLoader>
 
   {{yield}}
 </div>
