FlightBarogram: Replace  observer with  modifier

--- a/ember/app/components/base-barogram.hbs
+++ b/ember/app/components/base-barogram.hbs
@@ -1,1 +1,1 @@
-<div style={{flotStyle}} {{did-insert this.initFlot}}></div>
+<div style={{flotStyle}} {{did-insert this.initFlot}} {{did-update (action "redraw") this.data}}></div>
