--- a/ember/app/components/validated-input.hbs
+++ b/ember/app/components/validated-input.hbs
@@ -1,3 +1,3 @@
-<ValidatedBlock @label={{label}} @validation={{validation}} @hasContent={{value}} @forceErrorClass={{forceErrorClass}} @didValidate={{didValidate}} class={{class}}>
+<ValidatedBlock @label={{label}} @validation={{validation}} @hasContent={{value}} @forceErrorClass={{forceErrorClass}} @didValidate={{didValidate}} ...attributes>
   <Input @type={{type}} @value={{value}} @disabled={{disabled}} @autocomplete={{autocomplete}} placeholder={{placeholder}} class="form-control" data-test-input={{testSelector}} />
 </ValidatedBlock>
