NavBarLink: Convert to template-only component

--- a/ember/app/components/nav-bar.hbs
+++ b/ember/app/components/nav-bar.hbs
@@ -23,7 +23,7 @@
       <NavBarLink @nav={{nav}} @target="flights" @title={{t "flights"}} @icon="plane" />
       <NavBarLink @nav={{nav}} @target="ranking" @title={{t "ranking"}} @icon="reorder" />
       <NavBarLink @nav={{nav}} @target="statistics" @title={{t "statistics"}} @icon="bar-chart" />
-      <NavBarLink @nav={{nav}} @target="search" @title={{t "search.search"}} @icon="search" @listClass="hidden-lg" />
+      <NavBarLink @nav={{nav}} @target="search" @title={{t "search.search"}} @icon="search" class="hidden-lg" />
     </navbar.nav>
 
     <NavBarSearchForm @onSearch={{@onSearch}} />
