NotificationsBadge: Convert to Glimmer component

--- a/ember/app/components/notifications-badge.hbs
+++ b/ember/app/components/notifications-badge.hbs
@@ -1,3 +1,3 @@
-<span title={{this.title}} class="badge {{if this.notifications.hasUnread "badge-warning"}}" ...attributes>
+<span title={{t "notifications"}} class="badge {{if this.notifications.hasUnread "badge-warning"}}" ...attributes>
   {{notifications.counterText}}
 </span>
