--- a/ember/app/components/nav-bar-search-form.hbs
+++ b/ember/app/components/nav-bar-search-form.hbs
@@ -1,8 +1,16 @@
-<div ...attributes>
-  <form action="/search" class="navbar-form navbar-left navbar-search visible-lg" onsubmit={{action onSearch searchTextService.text}}>
-    <div class="form-group">
-      <Input @type="text" @name="text" @value={{searchTextService.text}} placeholder={{t "search.search"}} class="form-control" />
-    </div>
-  </form>
-  
-</div>
+<form
+  action="/search"
+  class="navbar-form navbar-left navbar-search visible-lg"
+  onsubmit={{action @onSearch this.searchTextService.text}}
+  ...attributes
+>
+  <div class="form-group">
+    <Input
+      @type="text"
+      @name="text"
+      @value={{this.searchTextService.text}}
+      placeholder={{t "search.search"}}
+      class="form-control"
+    />
+  </div>
+</form>
