SearchResultRow: Convert to template-only component

--- a/ember/app/components/search-result-row.hbs
+++ b/ember/app/components/search-result-row.hbs
@@ -1,62 +1,62 @@
 <tr ...attributes>
   <td local-class="column-icon">
-    {{#if (eq result.type "user")}}
+    {{#if (eq @result.type "user")}}
       {{fa-icon "user" title=(t "pilot")}}
-    {{else if (eq result.type "club")}}
+    {{else if (eq @result.type "club")}}
       {{fa-icon "group" title=(t "club")}}
-    {{else if (eq result.type "airport")}}
+    {{else if (eq @result.type "airport")}}
       {{fa-icon "map-marker" title=(t "airport")}}
     {{/if}}
   </td>
 
   <td local-class="column-type">
     <small>
-      {{#if (eq result.type "user")}}
+      {{#if (eq @result.type "user")}}
         {{t "pilot"}}
-      {{else if (eq result.type "club")}}
+      {{else if (eq @result.type "club")}}
         {{t "club"}}
-      {{else if (eq result.type "airport")}}
+      {{else if (eq @result.type "airport")}}
         {{t "airport"}}
       {{/if}}
     </small>
   </td>
 
   <td class="column-buttons">
-    {{#if (eq result.type "user")}}
-      <LinkTo @route="user" @model={{result.id}}>{{result.name}}</LinkTo>
+    {{#if (eq @result.type "user")}}
+      <LinkTo @route="user" @model={{@result.id}}>{{@result.name}}</LinkTo>
 
-    {{else if (eq result.type "club")}}
-      <LinkTo @route="club" @model={{result.id}}>{{result.name}}</LinkTo>
+    {{else if (eq @result.type "club")}}
+      <LinkTo @route="club" @model={{@result.id}}>{{@result.name}}</LinkTo>
 
-      {{#if result.website}}
-        <small>- <a href={{result.website}} target="_blank" rel="noopener">{{result.website}}</a></small>
+      {{#if @result.website}}
+        <small>- <a href={{@result.website}} target="_blank" rel="noopener">{{@result.website}}</a></small>
       {{/if}}
 
-    {{else if (eq result.type "airport")}}
-      <LinkTo @route="flights.airport" @model={{result.id}}>{{result.name}}</LinkTo>
+    {{else if (eq @result.type "airport")}}
+      <LinkTo @route="flights.airport" @model={{@result.id}}>{{@result.name}}</LinkTo>
 
-      {{#if result.icao}}
-        <small>- {{result.icao}}</small>
+      {{#if @result.icao}}
+        <small>- {{@result.icao}}</small>
       {{/if}}
 
-      {{#if result.frequency}}
-        <small>- {{result.frequency}} MHz</small>
+      {{#if @result.frequency}}
+        <small>- {{@result.frequency}} MHz</small>
       {{/if}}
     {{/if}}
 
     <div class="pull-right">
-      {{#if (eq result.type "user")}}
-        <LinkTo @route="flights.pilot" @model={{result.id}} class="btn btn-default btn-sm">{{fa-icon "plane"}} {{t "flights"}}</LinkTo>
-        <LinkTo @route="statistics.pilot" @model={{result.id}} class="btn btn-default btn-sm">{{fa-icon "bar-chart"}} {{t "statistics"}}</LinkTo>
+      {{#if (eq @result.type "user")}}
+        <LinkTo @route="flights.pilot" @model={{@result.id}} class="btn btn-default btn-sm">{{fa-icon "plane"}} {{t "flights"}}</LinkTo>
+        <LinkTo @route="statistics.pilot" @model={{@result.id}} class="btn btn-default btn-sm">{{fa-icon "bar-chart"}} {{t "statistics"}}</LinkTo>
 
-      {{else if (eq result.type "club")}}
-        <LinkTo @route="club.pilots" @model={{result.id}} class="btn btn-default btn-sm">{{fa-icon "group"}} {{t "members"}}</LinkTo>
-        <LinkTo @route="flights.club" @model={{result.id}} class="btn btn-default btn-sm">{{fa-icon "plane"}} {{t "flights"}}</LinkTo>
-        <LinkTo @route="statistics.club" @model={{result.id}} class="btn btn-default btn-sm">{{fa-icon "bar-chart"}} {{t "statistics"}}</LinkTo>
+      {{else if (eq @result.type "club")}}
+        <LinkTo @route="club.pilots" @model={{@result.id}} class="btn btn-default btn-sm">{{fa-icon "group"}} {{t "members"}}</LinkTo>
+        <LinkTo @route="flights.club" @model={{@result.id}} class="btn btn-default btn-sm">{{fa-icon "plane"}} {{t "flights"}}</LinkTo>
+        <LinkTo @route="statistics.club" @model={{@result.id}} class="btn btn-default btn-sm">{{fa-icon "bar-chart"}} {{t "statistics"}}</LinkTo>
 
-      {{else if (eq result.type "airport")}}
-        <LinkTo @route="flights.airport" @model={{result.id}} class="btn btn-default btn-sm">{{fa-icon "plane"}} {{t "flights"}}</LinkTo>
-        <LinkTo @route="statistics.airport" @model={{result.id}} class="btn btn-default btn-sm">{{fa-icon "bar-chart"}} {{t "statistics"}}</LinkTo>
+      {{else if (eq @result.type "airport")}}
+        <LinkTo @route="flights.airport" @model={{@result.id}} class="btn btn-default btn-sm">{{fa-icon "plane"}} {{t "flights"}}</LinkTo>
+        <LinkTo @route="statistics.airport" @model={{@result.id}} class="btn btn-default btn-sm">{{fa-icon "bar-chart"}} {{t "statistics"}}</LinkTo>
       {{/if}}
     </div>
   </td>
