SeasonDropdown: Remove unnecessary wrapper element

--- a/ember/app/components/season-dropdown.hbs
+++ b/ember/app/components/season-dropdown.hbs
@@ -1,25 +1,22 @@
-<div ...attributes>
-  <BsNav @type="pills" as |nav|>
-    <nav.dropdown @tagName="li" as |dd|>
-      <dd.toggle>
-        {{#if (eq year "all")}}
-          {{t "all-time"}}
-        {{else}}
-          {{t "season-YEAR" year=year}}
-        {{/if}}
-        <span class="caret"></span>
-      </dd.toggle>
-  
-      <dd.menu as |menu|>
-        <nav.item>{{#nav.link-to (query-params year="all")}}{{t "all-time"}}{{/nav.link-to}}</nav.item>
-  
-        {{menu.divider}}
-  
-        {{#each recentYears as |year|}}
-          <nav.item>{{#nav.link-to (query-params year=year)}}{{year}}{{/nav.link-to}}</nav.item>
-        {{/each}}
-      </dd.menu>
-    </nav.dropdown>
-  </BsNav>
-  
-</div>
+<BsNav @type="pills" ...attributes as |nav|>
+  <nav.dropdown @tagName="li" as |dd|>
+    <dd.toggle>
+      {{#if (eq year "all")}}
+        {{t "all-time"}}
+      {{else}}
+        {{t "season-YEAR" year=year}}
+      {{/if}}
+      <span class="caret"></span>
+    </dd.toggle>
+
+    <dd.menu as |menu|>
+      <nav.item>{{#nav.link-to (query-params year="all")}}{{t "all-time"}}{{/nav.link-to}}</nav.item>
+
+      {{menu.divider}}
+
+      {{#each recentYears as |year|}}
+        <nav.item>{{#nav.link-to (query-params year=year)}}{{year}}{{/nav.link-to}}</nav.item>
+      {{/each}}
+    </dd.menu>
+  </nav.dropdown>
+</BsNav>
