FlightList: Convert to Glimmer component

--- a/ember/app/components/flight-list.hbs
+++ b/ember/app/components/flight-list.hbs
@@ -1,30 +1,30 @@
 <table class="table table-striped table-condensed table-flights" ...attributes>
   <thead>
   <tr>
-    {{#if showDate}}
-      <SortableTableHeader @column="date" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" class="date">{{t "date"}}</SortableTableHeader>
+    {{#if (not-eq @showDate false)}}
+      <SortableTableHeader @column="date" @sortColumn={{@sortColumn}} @sortOrder={{@sortOrder}} @defaultOrder="desc" class="date">{{t "date"}}</SortableTableHeader>
     {{/if}}
 
-    <SortableTableHeader @column="score" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" class="numeric">{{t "score"}}</SortableTableHeader>
+    <SortableTableHeader @column="score" @sortColumn={{@sortColumn}} @sortOrder={{@sortOrder}} @defaultOrder="desc" class="numeric">{{t "score"}}</SortableTableHeader>
 
-    {{#if showPilot}}
-      <SortableTableHeader @column="pilot" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} class="pilot">{{t "pilot"}}</SortableTableHeader>
+    {{#if (not-eq @showPilot false)}}
+      <SortableTableHeader @column="pilot" @sortColumn={{@sortColumn}} @sortOrder={{@sortOrder}} class="pilot">{{t "pilot"}}</SortableTableHeader>
     {{/if}}
 
-    <SortableTableHeader @column="distance" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" class="numeric">{{t "distance"}}</SortableTableHeader>
+    <SortableTableHeader @column="distance" @sortColumn={{@sortColumn}} @sortOrder={{@sortOrder}} @defaultOrder="desc" class="numeric">{{t "distance"}}</SortableTableHeader>
 
-    {{#if showAirport}}
-      <SortableTableHeader @column="airport" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} class="airport">{{t "airport"}}</SortableTableHeader>
+    {{#if (not-eq @showAirport false)}}
+      <SortableTableHeader @column="airport" @sortColumn={{@sortColumn}} @sortOrder={{@sortOrder}} class="airport">{{t "airport"}}</SortableTableHeader>
     {{/if}}
 
-    {{#if showClub}}
-      <SortableTableHeader @column="club" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} class="club hidden-sm hidden-xs">{{t "club"}}</SortableTableHeader>
+    {{#if (not-eq @showClub false)}}
+      <SortableTableHeader @column="club" @sortColumn={{@sortColumn}} @sortOrder={{@sortOrder}} class="club hidden-sm hidden-xs">{{t "club"}}</SortableTableHeader>
     {{/if}}
 
-    <SortableTableHeader @column="aircraft" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} class="aircraft hidden-xs">{{t "aircraft"}}</SortableTableHeader>
+    <SortableTableHeader @column="aircraft" @sortColumn={{@sortColumn}} @sortOrder={{@sortOrder}} class="aircraft hidden-xs">{{t "aircraft"}}</SortableTableHeader>
 
-    {{#if showTimes}}
-      <SortableTableHeader @column="time" @sortColumn={{sortColumn}} @sortOrder={{sortOrder}} @defaultOrder="desc" class="times hidden-xs">{{t "time"}}</SortableTableHeader>
+    {{#if (not-eq @showTimes false)}}
+      <SortableTableHeader @column="time" @sortColumn={{@sortColumn}} @sortOrder={{@sortOrder}} @defaultOrder="desc" class="times hidden-xs">{{t "time"}}</SortableTableHeader>
     {{/if}}
 
     <th class="column-buttons"></th>
@@ -32,14 +32,14 @@
   </tr>
   </thead>
   <tbody>
-  {{#each flights as |flight|}}
+  {{#each @flights as |flight|}}
     <FlightListRow
       @flight={{flight}}
-      @showDate={{showDate}}
-      @showPilot={{showPilot}}
-      @showAirport={{showAirport}}
-      @showClub={{showClub}}
-      @showTimes={{showTimes}} />
+      @showDate={{not-eq @showDate false}}
+      @showPilot={{not-eq @showPilot false}}
+      @showAirport={{not-eq @showAirport false}}
+      @showClub={{not-eq @showClub false}}
+      @showTimes={{not-eq @showTimes false}} />
   {{else}}
     <tr>
       <td colspan="10">{{t "no-flights-found"}}</td>
