--- a/ember/app/components/flight-path-layer.hbs
+++ b/ember/app/components/flight-path-layer.hbs
@@ -1,3 +1,3 @@
-{{#each flights as |flight|}}
-  <FlightPathLayerFeature @source={{source}} @flight={{flight}} />
+{{#each @flights as |flight|}}
+  <FlightPathLayerFeature @source={{this.source}} @flight={{flight}} />
 {{/each}}
